--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -35,7 +35,7 @@
   @include respond(phone) {
     background-image: none;
     border: 2px solid $secondary-color;
-    -webkit-text-fill-color: $secondary-color;
+    -webkit-text-fill-color: $primary-color;
   }
 
   &::after {
